--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				if (_a !== undefined) {
 					var stateTagOpen, stateTagClose;
 					let postCode = '';
-					if(_a.stateFull !== undefined){
+					if(_a.postCode !== undefined){
 						postCode = " " + _a.postCode;
 					}
 					if (_a.stateFull !== undefined) {
